# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import signalsRouter from "./signals";
 import settingsRouter from "./settings";
 import storageRouter from "./storage";
 import guideAssetsRouter from "./guide-assets";
+import portfolioRouter from "./portfolio";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(settingsRouter);
 router.use(signalsRouter);
 router.use(storageRouter);
 router.use(guideAssetsRouter);
+router.use(portfolioRouter);
 
 export default router;
